--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>1erPreEntrega</title>
 </head>
 <body>
+    <script src="./js/Alumno.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
