--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1erPreEntrega</title>
+    <title>Emilio Gonzalez | Proyecto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
+
 <body>
+
+    <div class="container shadow-lg p-5 mb-5 mt-5 bg-body rounded">
+        <form class="row g-3" id="frmAgregar">
+            <div class="col-12">
+                <label for="inputNombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="inputNombre">
+            </div>
+            <div class="col-md-6">
+                <label for="inputNota1" class="form-label" id="nota1">Nota 1° parcial</label>
+                <input type="text" class="form-control" id="inputNota1">
+            </div>
+            <div class="col-md-6">
+                <label for="inputNota2" class="form-label" id="nota2">Nota 2° parcial</label>
+                <input type="text" class="form-control" id="inputNota2">
+            </div>
+
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary" id="btnAgregar">Agregar</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="container shadow-lg p-5 mb-5 bg-body rounded">
+        <table class="table table-striped table-secondary">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Nota 1° parcial</th>
+                <th scope="col">Nota 2° parcial</th>
+            </tr>
+            </thead>
+            <tbody id="tabla">
+            </tbody>
+        </table>
+    </div>
+
+
+
     <script src="./js/Alumno.js"></script>
     <script src="./js/app.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+crossorigin="anonymous"></script>
+
 </body>
 </html>
