--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Emilio Gonzalez | Proyecto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/sweetalert2.min.css">
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
@@ -14,6 +16,16 @@
 <body class="background">
 
     <div class="container shadow-lg p-5 mb-5 mt-5 bg-body rounded">
+
+        <div class="row">
+            <div class="col-md-6">
+                <h2 id="materia" class="mb-3">Materia: </h2>
+            </div>
+            <div class="col-md-6">
+                <h2 id="profesor" class="mb-3">Profesor: </h2>
+            </div>
+        </div>
+        
         <form class="row g-3" id="frmAgregar">
             <div class="col-12">
                 <label for="inputNombre" class="form-label">Nombre</label>
@@ -62,6 +74,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="./js/sweetalert2.min.js"></script>
 
 </body>
 </html>
