--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="row">
             <div class="col-md-6">
-                <h2 id="materia" class="mb-3">Materia: </h2>
+                <h2 id="curso" class="mb-3">Curso: </h2>
             </div>
             <div class="col-md-6">
                 <h2 id="profesor" class="mb-3">Profesor: </h2>
