- Agrego boton Borrar.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <tbody id="tabla">
             </tbody>
         </table>
+        <div class="col-12">
+            <button type="submit" class="btn btn-danger" id="btnLimpiar">Borrar</button>
+        </div>
     </div>
 
     <div class="container shadow-lg p-5 mb-5 bg-body rounded">
