--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@
             </thead>
             <tbody id="tabla">
             </tbody>
+            <tfoot>
+                <tr>
+                    <th colspan="5" id="aprobados">NO HAY ALUMNOS APROBADOS: </th>
+                </tr>
+            </tfoot>
         </table>
         <div class="col-12">
             <button type="submit" class="btn btn-danger" id="btnLimpiar">Borrar</button>
         </div>
     </div>
-
-    <div class="container shadow-lg p-5 mb-5 bg-body rounded">
-        <h2 id="aprobados">NO HAY ALUMNOS APROBADOS</h2>
-    </div>
-
-
 
     <script src="./js/Alumno.js"></script>
     <script src="./js/app.js"></script>
